Name:                bibtex2html
Version:             0.1
Synopsis:            Convert a BibTeX database into pretty HTML
Description:         This package contains 3 tools for converting BibTex files into an HTML format. The
                     3 tools are parse-bib, bib2html, and pp-html, which will typically be used in a pipeline
                     fashion. Parse-bib creates an abstract syntax tree, bib2html converts this into an abstract HTML 
                     representation, also doing error-checking, and pp-html pretty-prints this HTML abstract
                     syntax tree.
License:             GPL-3
Author:              Paul van der Walt (3120805)
Maintainer:          p.d.vanderwalt@students.uu.nl
Copyright:           2010 P. D. van der Walt
Build-type:          Simple
Cabal-version:       >=1.2
extra-source-files:  example.bib
-- data-files:          slides.pdf

Library
    Exposed-modules: 
                     Common.BibTypes
                     Common.HtmlTypes
                     Common.TreeInstances
                     Common.ATermUtils
Executable pp-html
    Main-is:         Main.hs
    Build-depends:   uu-parsinglib>=2.5.6.1,base >= 3 && < 5,cco>=0.0.4,ffi,rts,ansi-terminal
    hs-source-dirs:  pp-html-src,.
Executable bib2html
    Main-is:         Main.hs
    Build-depends:   uu-parsinglib>=2.5.6.1,base >= 3 && < 5,cco>=0.0.4,ffi,rts,ansi-terminal
    hs-source-dirs:  bib2html-src,.
Executable parse-bib
    Main-is:         Main.hs
    Build-depends:   uu-parsinglib>=2.5.6.1,base >= 3 && < 5,cco>=0.0.4,ffi,rts,ansi-terminal,haskell98
    hs-source-dirs:  parse-bib-src,.
