Name:                bibtex2html
Version:             0.1
Synopsis:            Convert a BibTeX database into pretty HTML
Description:         This package contains 3 tools for converting BibTex files into an HTML format. The
                     3 tools are parse-bib, bib2html, and pp-html, which will typically be used in a pipeline
                     fashion. Parse-bib creates an abstract syntax tree, bib2html converts this into an abstract HTML 
                     representation, also doing the main error-checking and validation, and pp-html pretty-prints 
                     this HTML abstract syntax tree.
                     .
                     The documentation is laid out in a literate programming style, i.e. the documentation is placed
                     next to each piece of code it refers to. This page is the main documentation page, and from here
                     one can navigate to different sections. 
                     .
                     The Common module contains code which is relevant to each of the 3 tools, such as the data structures
                     representing an abstract tree of BibTeX or HTML, or algebras to fold over these structures.
                     .
                     The other 3 sections correspond to the 3 tools, where PrettyPrintHTML contains the code resulting in
                     pp-html, AbstractBib2HTML contains the code for bib2html, and ParseBib contains the code for parse-bib. 
License:             GPL-3
License-file:        LICENSE
Category:            Typesetting
Author:              Paul van der Walt (3120805)
Maintainer:          p.d.vanderwalt@students.uu.nl
Copyright:           2010 P. D. van der Walt
Build-type:          Simple
Cabal-version:       >=1.4
extra-source-files:  example1.bib
                     example2.bib
                     example3.bib
                     example4.bib
data-files:          README
                     haddock.pdf

Library
    Exposed-modules: 
                     Common.AllowedFields
                     Common.BibTypes
                     Common.HtmlTypes
                     Common.TreeInstances
                     Common.ATermUtils
                     ParseBib.ParserUtils
                     ParseBib.Parser
                     ParseBib.Tool
                     AbstractBib2HTML.Tool
                     PrettyPrintHTML.Tool
                     
Executable pp-html
    Main-is:         Main.hs
    Build-depends:   uu-parsinglib>=2.5.6.1,base >= 3 && < 5,cco>=0.0.4,ffi,rts,ansi-terminal
    hs-source-dirs:  PrettyPrintHTML,.
Executable bib2html
    Main-is:         Main.hs
    Build-depends:   uu-parsinglib>=2.5.6.1,base >= 3 && < 5,cco>=0.0.4,ffi,rts,ansi-terminal
    hs-source-dirs:  AbstractBib2HTML,.
Executable parse-bib
    Main-is:         Main.hs
    Build-depends:   uu-parsinglib>=2.5.6.1,base >= 3 && < 5,cco>=0.0.4,ffi,rts,ansi-terminal,haskell98
    hs-source-dirs:  ParseBib,.
